--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
 <script>
 // --- Images ---
 const fishImg = new Image();
-fishImg.src = 'https://i.imgur.com/o7OaL4r.png'; // Fish sprite sheet (3 frames)
+fishImg.src = 'https://opengameart.org/sites/default/files/fishSpriteSheet.png'; // Fish sprite sheet (3 frames)
 const fishFrames = 3;
 let fishFrameIndex = 0;
 let fishFrameCounter = 0;
 
 const coralImg = new Image();
-coralImg.src = 'https://i.imgur.com/0V9Kslc.png'; // Coral/seaweed
+coralImg.src = 'https://opengameart.org/sites/default/files/coral.png'; // Coral/seaweed obstacle
 
 const bgImg = new Image();
-bgImg.src = 'https://i.imgur.com/Z8lhxWv.jpg'; // Underwater background
+bgImg.src = 'https://opengameart.org/sites/default/files/underwater-background.png'; // Ocean background
 
 const canvas = document.getElementById('gameCanvas');
 const ctx = canvas.getContext('2d');
